--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rp",
+  "name": "samp-gamemode",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "SA-MP roleplay gamemode built in Node.js.",
+  "main": "dist/index.js",
   "scripts": {
     "start": "npx tsc && omp-server.exe"
   },
@@ -18,6 +18,6 @@
     "@types/pg": "^8.10.2",
     "typescript": "^5.2.2"
   },
-  "author": "",
+  "author": "vladgitx",
   "license": "ISC"
 }
